# web-search-tool

./: .env.example  .gitignore  README.md  pyproject.toml  snippet.txt
agent-framework/: af-websearchtool-bing-redis.py
bing-custom-preview/: bingcustomsearch-tool-preview.py
foundry-sdk/: websearchtool-bingcustom-instructions.py  websearchtool-bingcustom.py  websearchtool-openai.py
samples/agent_framework/: bing.py
samples/foundry_sdk/: bing.py
